--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
+<!-- Dasmoto's Arts & Crafts -->
 <!DOCTYPE html>
 <html>
 <head>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dasmoto's Arts & Crafts</title>
+    <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
+    <header>
+        <nav>    
+        </nav>
+
+    </header>
+    
 <main>
+    <h1>Dasmoto's Arts & Crafts</h1>
+    <h2>Brushes</h2>
+    <h2>Frames</h2>
+    <h2>Paint</h2>
 
 
 
 </main>
 <footer>
-
-
-
-
+<p>Imported paint from Finland. 
+    Over 256 colors available in-store, varying in quantity 
+    (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, 
+    increasing the finish and longevity of any artwork. 
+    Starting at $5.00 / tube.</p>
 
 </footer>
 
